...
  "Save Address": "Save Address",
  "Edit": "Edit",
  "Please Select address Location": "Please Select address Location",
  "Your selected Location": "Your selected Location",
  "title" :  "title",
  "description": "description",
  "comment": "comment",
  "City": "City",
  "value": "price of goods",
  "Please enter your name":  "Please enter your name",
  "Please enter your mobile": "Please enter your mobile",
  "please enter a valid mobile number": "please enter a valid mobile number",
  "please enter a valid email address": "please enter a valid email address",
...
  "Home": "Home",
  "My Orders": "My Orders",
  "Log Out": "Log Out",
  "Active": "Active",
  "Delivered": "Delivered",
  "Not Completed": "Not Completed",
  "ASAP": "ASAP",
  "new": "new",
  "pending": "pending",
  "active": "active",
  "No Orders": "No Orders",
  "Status": "Status:",
  "Barcode": "Barcode",
...
  "Packaging":"Packaging",
  "Total Price":"Total Price",
  "Send The Shipment":"Send The Shipment",
  "phone": "phone",
  "Your selected deliver Location":"Your selected deliver Location",
  "Your selected pickup Location": "Your selected pickup Location",
  "fragile": "fragile",
  "normal": "normal",
  "regular": "normal",
  "save": "save",
  "liquid": "liquid",
  "packaging": "packaging",
  "Shipment Details": "Shipment Details",
  "pickup address": "pickup address",
  "Deliver Address": "Deliver Address",
  "Please try again": "Please try again",
  "Successfully done": "Successfully done",
  "Nothing Changed": "Nothing Changed",
  "please check the mobile number and password or contact the customer services" :"please check the mobile number and password or contact the customer services",
  "Sign up for free": "Sign up for free",
  "You do not have account ?": "You do not have account ?",
  "Back": "Back",
  "Back to login": "Back to login",
  "Menu": "Menu",
  "My Account": "My Account",
  "Quick access": "Quick access",
  "From : ": "From : ",
  "To : ": "To : ",
  "My Shipments":"My Shipments",
  "Shipment": "Shipment",
  "Cancelled": "Cancelled",
  "progress":"progress",
  "cancelled": "cancelled",
  "delivered": "delivered",
  "hold": "hold",
...
  "Address": "Address",
  "Position on Google Maps": "Position on Google Maps",
  "Add Order": "Add Order",
  "New Order": "New Order",
  "please try to login again": "please try to login again",
  "code": "code",
  "My addresses": "My addresses",
  "Total": "Total",
  "Add New": "Add New",
  "My Bank Account": "My Bank Account",
  "Full name ( Account owner )":"Full name ( Account owner )",
  "Bank name" : "Bank name",
  "IBAN ( Account number )": "IBAN ( Account number )",
  "Save Information": "Save Information",
  "i am not the sender": "i am not the sender",
  "max 20 characters": "max 20 characters",
  "Credit": "Credit",
  "Balance": "Balance",
  "10 - 15 kG": "10 - 15 kG",
  "Transaction History": "Transaction History",
  "deposit": "deposit",
  "fee": "fee",
  "withdraw": "withdraw",
  "SR": "SR",
  "Full name ( Store name )": "Full name ( Store name )",
  "Password": "Password",
  "I am not the sender": "I am not the sender",
  "Honey and oil transport": "Honey and oil transport",
...
  "phone number": "phone number",
  "Unregistered info": "Unregistered info",
  "Cash on delivery": "Collect from receiver",
  "Shipment id :": "Shipment id :",
  "Edit shipment":  "Edit shipment",
  "Cancel shipment": "Cancel shipment",
  "Shipment information": "Shipment information",
  "Receiver information": "Receiver information",
  "Sender information" : "Sender information",
  "Shipment status": "Shipment status",
  "To store": "To store",
  "From store": "From store",
  "There are no orders": "There are no orders",
...
  "المنزل": "Home",
  "اخر": "Other",
  "Edit Order": "Edit Order",
  "Options": "Options",
  "bill receiver for shopping": "bill receiver for shipping",
  "Shipping on receiver": "Shipping fee on receiver",
  "cold": "Cold",
  "When you reserve orders they will": "When you reserve orders they will",
  "appear here": "appear here",
  "My reserves": "My reserves",
  "Supervisor" : "Supervisor",
  "Go to orders": "Go to orders",
  "You have": "You have",
...
  "wrong-address": "wrong-address",
  "extra": "extra",
  "Extra :" :"Extra :",
  "Shipping on receiver:": "Shipping on receiver:",
  "please update the application to be able to continue": "please update the application to be able to continue",
  "Neighborhood:": "Neighborhood:",
  "cod": "cash on delivery",
  "Bank data added": "Bank data added",
  "please add your full name": "please add your full name",
  "please add your bank name": "please add your bank name",
  "please add your iban": "please add your iban",
  "Supervisor phone": "Supervisor phone",
  "Saved Location": "Saved Location",
...
  "pickup": "Captain pickup",
  "store-in": "To Store",
  "deliver": "Delivered",
  "Captain": "Captain",
  "Receiver": "Receiver",
  "Sender": "Sender",
  "Order Placed": "Order Placed",
  "Processing": "Processing",
  "Tracking": "Tracking",
  "there is no whatsapp installed": "there is no whatsapp installed",
  "Delivery charge:": "Delivery charge:",
  "Done": "Done",
  "Skip": "Skip",
...
