...
                              ],
                            ),
                          ),
                        ) : SizedBox(),
                        Expanded(
                          child: SingleChildScrollView(
                            key: const ValueKey("addOrderScroll"),
                            child: Column(
                              children: [
                             widget.ordersDataModel == null ?
                             SizedBox():  Padding(
                               padding: EdgeInsets.only(
                                   right: screenWidth! * 0.03,
...
                  //       return SizedBox();
                  //     },
                  //     itemBuilder: (context, suggestion) {
                  //       return Column(
                  //         children: [
                  //           ListTile(
                  //               title: Text(((suggestion as Map)['receiverName'] ?? ""),style: TextStyle(color: Colors.white, ),
                  //               subtitle: Text(suggestion['receiverPhone'] ?? "",style: TextStyle(color: Colors.white))
                  //           ),
                  //           Divider(color: Colors.white, thickness: 2,)
                  //         ],
                  //       );
                  //     },
                  //     onSuggestionSelected: (suggestion) {
...
                            style: TextStyle(
                                fontSize: 14, color: Colors.black87),
                          )),
                      // receiverCities.length > 0
                      //     ?     Expanded(
                      //   child: DropdownSearch<ErCity?>(
                      //     key: const ValueKey('receiverCity'),

                      //     // dropdownSearchDecoration: // FIXME: API changed to dropdownDecoratorProps kTextFieldDecoration2.copyWith(
                      //         hintText: ""
                      //     ),
                      //     searchBoxDecoration: kTextFieldDecoration.copyWith(
                      //         hintText: "City name ..".tr(),
...
                  )
                : Container(),
         widget.ordersDataModel == null ? Row(
              children: [
                Expanded(
                  child: TextFormField(
                    key: const ValueKey('receiverBuilding'),
                    focusNode: receiverBuildingFocus,
                    onFieldSubmitted: (v) {
                      FocusScope.of(context).requestFocus(receiverFloorFocus);
                    },
                    controller: _receiverBuildingController,
                    decoration: kTextFieldDecoration2.copyWith(
...
                ),
                SizedBox(
                  width: 5,
                ),
                Expanded(
                  child: TextFormField(
                    key: const ValueKey('receiverFloor'),
                    focusNode: receiverFloorFocus,
                    onFieldSubmitted: (v) {
                      FocusScope.of(context).requestFocus(receiverFlatFocus);
                    },
                    controller: _receiverFloor,
                    decoration: kTextFieldDecoration2.copyWith(
...
                ),
                SizedBox(
                  width: 5,
                ),
                Expanded(
                  child: TextFormField(
                    key: const ValueKey('receiverFlat'),
                    focusNode: receiverFlatFocus,
                    controller: _receiverFlatController,
                    decoration: kTextFieldDecoration2.copyWith(
                        hintText: 'Flat optional'.tr(),
                        hintStyle: TextStyle(fontSize: 11)),
                  ),
...
                ],
              ),
            ),

          widget.ordersDataModel == null ?
          GestureDetector(
              key: const ValueKey('addPackage'),
              onTap: () async {
                FocusScope.of(context).unfocus();
                if (_currentCitySelected!.name == null ||
                    _currentZone!.name == null) {
                  ComFunctions.showToast(
                      color: Colors.red,
...
              padding: const EdgeInsets.only(bottom: 10),
              child: Row(
                children: [
                  Expanded(
                    flex: 3,
                    child: TextFormField(
                      key: const ValueKey('phoneLogin'),
                      focusNode: senderPhoneFocus,
                      keyboardType: TextInputType.number,
                      onChanged: (e) {
                        if (startValidation) {
                          _formKey.currentState!.validate();
                        }
...
