...
  Widget build(BuildContext context) {
    Size size = MediaQuery.of(context).size;
    width = size.width;
    height = size.height;
    List<Widget> drawerItemsList = [
      DrawerCard(
        keyValue: ValueKey('home'),
        icon: SvgPicture.asset(
          "assets/images/home.svg",
          color: Colors.black87,
          placeholderBuilder: (context) => CustomLoading(),
          height: 20.0,
        ),
...
        },
        text: 'HomeHome'.tr(),
        color: Color(0xffF1F1F1),
        showNote: false,
      ),
      // DrawerCard(
      //   keyValue: ValueKey('profile'),
      //
      //   icon:SvgPicture.asset(
      //     "assets/images/profile.svg",
      //     placeholderBuilder: (context) =>
      //         CustomLoading(),
      //     height: 20.0,
...
      //   },
      //   text: 'My Account'.tr(),
      //   color: Color(0xffF1F1F1),
      //   showNote: false,
      // ),
      DrawerCard(
        keyValue: ValueKey('payments'),
        icon: SvgPicture.asset(
          "assets/images/wallet.svg",
          placeholderBuilder: (context) => CustomLoading(),
          height: 20.0,
        ),
        onTapped: () {
...
        },
        text: 'My Payments'.tr(),
        color: Color(0xffF1F1F1),
        showNote: false,
      ),
      DrawerCard(
        keyValue: ValueKey('myOrders'),
        icon: SvgPicture.asset(
          "assets/images/myShipmetns.svg",
          placeholderBuilder: (context) => CustomLoading(),
          height: 22.0,
        ),
        onTapped: () {
...
        },
        text: 'My Shipments'.tr(),
        color: Color(0xffF1F1F1),
        showNote: false,
      ),
      DrawerCard(
        keyValue: ValueKey('myAddress'),
        icon: SvgPicture.asset(
          "assets/images/myAddresses.svg",
          placeholderBuilder: (context) => CustomLoading(),
          height: 20.0,
        ),
        onTapped: () {
...
        },
        text: 'My Addresses'.tr(),
        color: Color(0xffF1F1F1),
        showNote: showNoteAddress ?? false,
      ),
      DrawerCard(
        keyValue: ValueKey('myBank'),
        icon: SvgPicture.asset(
          "assets/images/myBank.svg",
          placeholderBuilder: (context) => CustomLoading(),
          height: 20.0,
        ),
        onTapped: () {
...
        },
        text: 'My Invoices'.tr(),
        color: Color(0xffF1F1F1),
        showNote: false,
      ),
      DrawerCard(
        keyValue: ValueKey('route'),
        icon: SvgPicture.asset(
          "assets/images/route.svg",
          color: Colors.black54,
          placeholderBuilder: (context) => CustomLoading(),
          height: 20.0,
        ),
...
      //   }
      //   );
      //   print(response.statusCode);
      // },
      // ),
      // IconButton(
      //     key: const ValueKey('popMenu'),
      //     icon: Icon(Icons.ac_unit , color: Colors.white,), onPressed: (){
      //   Navigator.push(
      //       context,
      //       MaterialPageRoute(
      //           builder: (context) => ConfirmationScreen(
      //             resourcesData: widget.resourcesData,
...
