...
        backgroundColor: Constants.clientBackgroundGrey,
        body: Container(
          child: Padding(
            padding: EdgeInsets.symmetric(horizontal: 10, vertical: 10),
            child: SafeArea(
              child: SingleChildScrollView(
                key: ValueKey('detailedOrderScroll'),
                physics: AlwaysScrollableScrollPhysics(),
                child: Column(
                  children: [
                    Column(
                      children: [
                        Row(
...
                                    ),
                                  ],
                                ),
                              ],
                            ),
                            ButtonTheme(
                              key: const ValueKey('closeDtOrder'),
                              minWidth: 0,
                              height: 0,
                              child: ElevatedButton(
                                onPressed: _onBackPressed,
                                child: Container(
                                  width: 35,
...
                                    children: [
                                      Container(
                                          decoration: BoxDecoration(
                                              color: Colors.white,
                                              shape: BoxShape.circle),
                                          child: IconButton(
                                            key: const ValueKey('editShipment'),
                                            padding: EdgeInsets.all(2),
                                            onPressed: () {
                                              Navigator.push(
                                                  context,
                                                  MaterialPageRoute(
                                                      builder: (context) =>
...
                                      Container(
                                          decoration: BoxDecoration(
                                              color: Colors.white,
                                              shape: BoxShape.circle),
                                          child: IconButton(
                                            key: const ValueKey(
                                                'cancelShipment'),
                                            padding: EdgeInsets.all(2),
                                            onPressed: () {
                                              showDialog(
                                                  context: context,
                                                  barrierDismissible: true,
                                                  builder: (context) {
...
                                                            Navigator.pop(
                                                                context);
                                                          },
                                                        ),
                                                        ElevatedButton(
                                                          key: const ValueKey(
                                                              'yesCancel'),
                                                          child: Text(
                                                            'Yes'.tr(),
                                                            style: TextStyle(
                                                                color:
                                                                    Colors.red),
                                                          ),
...
                      ],
                    ),
                    SizedBox(
                      height: 8,
                    ),
                    InkWell(
                      key: const ValueKey("trackingBtn"),
                      onTap: () {
                        Navigator.push(
                            context,
                            MaterialPageRoute(
                                builder: (context) => ShipmentTracking(
                                      resourcesData: widget.resourcesData,
...
